mytask/kubernetes_manifests/canary/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - image: bhargavshah86/kube-test:v0.1 #used a publicly available app image here
#       command: ["/bin/sh", "-c", "sleep 3600"]
        name: webserver
        ports:
        - containerPort: 80
