mytask/kubernetes_manifests/canary/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: canary
  name: canary-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary
