mytask/kubernetes_manifests/canary/primary-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary-canary-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: primary-canary-lb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.weighted-routing: |
      {
          "type": "forward",
          "forwardConfig": {
              "targetGroups": [
                  {
                      "serviceName": "primary-service",
                      "servicePort": 80,
                      "weight": 90
                  },
                  {
                      "serviceName": "canary-service",
                      "servicePort": 80,
                      "weight": 10
                  }
              ],
              "targetGroupStickinessConfig": {
                  "enabled": false
              }
          }
      }
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: weighted-routing
                port: 
                  name: use-annotation
            pathType: ImplementationSpecific
